# git_release_tracker

./: .env-sample  Cargo.toml  Procfile  README.md  run.sh
src/: config.rs  main.rs  telegram.rs  tracker.rs
src/data/: dracarys18_NotKernel
