[package]
name = "release-track"
version = "0.1.0"
authors = ["dracarys18 <karthihegde010@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version="*",features= ["json"]}
serde_json = "*"
dotenv = "*"
tokio = { version = "*", features = ["full"] }
pretty-bytes = "0.2.2"
regex = "*"
